# trivy-web

./: .envrc  Cargo.toml  Dockerfile  Earthfile  Justfile  README.adoc  TODO.adoc  build.rs
.buddy/: build-docker-container.fixed.yml  rust.fixed.yml
.github/workflows/: earthly.yml  rust.yml
deploy/: trivy-db-update.timer  trivy-web.service
deploy/kubernetes/: nodeport.yaml
deploy/kubernetes/istio/ServiceEntry/: ghcr.io.yaml  github.com.yaml
deploy/kubernetes/trivy-server/: HorizontalPodAutoscaler.yaml  Service.yaml
deploy/kubernetes/trivy-web/: Deployment.yaml  HorizontalPodAutoscaler.yaml  Service.yaml
kubernetes/: deployment.yaml  namespace.yaml  nodeport.yaml  route.yaml  service.yaml
kubernetes/client/: deployment.yaml  route.yaml  service.yaml
kubernetes/istio/: Gateway.yaml  gateway.yaml
kubernetes/istio/ServiceEntry/: maven.org.yaml
kubernetes/istio/serviceentry/: docker-com.yaml
kubernetes/jaeger/: Deployment.yaml  Service.yaml
kubernetes/redis/: StatefulSet.yaml  statefulset.yaml
kubernetes/redis-server/: Service.yaml  StatefulSet.yaml
kubernetes/redis-web/: Service.yaml  StatefulSet.yaml
kubernetes/server/: deployment.yaml  service.yaml
kubernetes/trivy-server/: Deployment.yaml  deployment.yaml
kubernetes/trivy-web/: Deployment.yaml  HorizontalPodAutoscaler.yaml  Service.yaml  deployment.yaml  gateway.yaml  virtualservice.yaml
kubernetes/trivy-web/serviceentry/: search-maven-org.yaml
resources/: index.html  trivy-db-update.service  trivy-web.service
resources/css/: main.css
src/: args.rs  filters.rs  handler.rs  main.rs  signal.rs  telemetry.rs
src/handler/: cosign.rs  docker.rs  response.rs  trivy.rs
src/handler/resources/cosign_verify/: argo-events.json  example.json
src/handler/resources/tests/: cosign_manifest.json  trivy-manifest-response.json  trivy_output2.json  trivy_output3.json
src/handler/response/: cache.rs
src/resources/tests/: trivy_output.json
templates/: cosign_manifest.html  cosign_verify.html  cve_information.html  docker_manifest.html  footer.html  index.html  response.html  response_image.html  response_trivy.html  trivy.html  vulnerabilities.html
