[package]
name = "trivy-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12", features = ["serde-json"] }
axum-macros = "0.4"
axum = { version = "0.7", features = ["json", "macros", "tracing"] }
chrono = "0.4"
clap = { version = "4", features = ["derive", "env", "cargo"] }
docker-registry-client = { git = "https://github.com/AlexanderThaller/docker-registry-client-rs.git" }
eyre = "0.6"
maud = "0.26"
minify-html = "0.15"
once_cell = "1"
opentelemetry = "0.23"
opentelemetry-otlp = "0.16"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.15"
redis-macros = "0.4"
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full", "tracing"] }
tower-http = { version = "0.5", features = ["compression-full"] }
tracing = "0.1"
tracing-opentelemetry = "0.24"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
x509-parser = "0.16"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
