[package]
name = "trivy-web"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.14" }
axum-macros = "0.5"
axum = { version = "0.8", features = ["json", "macros", "tracing"] }
chrono = "0.4"
clap = { version = "4", features = ["derive", "env", "cargo"] }
docker-registry-client = { git = "https://github.com/AlexanderThaller/docker-registry-client-rs.git" }
#docker-registry-client = { path = "../docker-registry-client-rs" }
eyre = "0.6"
maud = "0.27"
minify-html = "0.17"
once_cell = "1"
opentelemetry = "0.23"
opentelemetry-otlp = "0.16"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.15"
redis-macros = "0.4"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full", "tracing"] }
tower-http = { version = "0.5", features = ["compression-full"] }
tracing = "0.1"
tracing-opentelemetry = "0.24"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
x509-parser = "0.16"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
pretty_assertions = "1"

[lints.rust]
#missing-docs = "warn"
missing-debug-implementations = "warn"
rust-2018-idioms = "warn"
unsafe-code = "forbid"
unused-lifetimes = "warn"

[lints.clippy]
allow-attributes = "warn"
allow-attributes-without-reason = "warn"
dbg-macro = "warn"
pedantic = "warn"
todo = "warn"
unwrap-used = "warn"

[profile.deploy]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"
